# miles

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  eval_miles.py  pyproject.toml  screenshot.py
.claude/commands/: coach.md  miles-plan.md  miles.md
adr/: 0001-training-plans-as-versioned-ground-truth.md
miles/: api.py  auth.py  build_paces.py  builds.py  classifier.py  db.py  derive.py  distance_builds.py  fitness.py  fitness_api.py  format.py  inference.py  mcp_server.py  periods.py  plan.py  plan_adherence.py  plan_api.py  races.py  strava_client.py  streams.py  sync.py  weather.py
miles/static/: activities.html  activity.html  build.html  builds.html  charts.js  compare.html  index.html  nav.js  plan.html  races.html  theme.css  training.html  workbook.html  years.html
scripts/: seed_demo_plan.py
tests/: test_api_pace.py  test_format.py  test_streams.py
